--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -8,6 +8,25 @@
 
 }
 
+$main-green: #75d3b3;
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+
+::-webkit-scrollbar-track {
+    //box-shadow: inset 0 0 6px #6162FDFF;
+}
+
+::-webkit-scrollbar-thumb {
+    //box-shadow: inset 0 0 6px #6162FDFF;
+    border-radius: 10px;
+    background: $main-green;
+
+}
+
+$header_items_height: 50px;
 
 body {
     background-color: #f6f6f6;
@@ -24,19 +43,43 @@ body {
 .header {
     padding: 10px 0;
     width: 100%;
-    background-color: #75d3b3;
+    background-color: $main-green;
 
     .header_navigation {
         li {
-            transition: .3s;
+            transition: .2s;
             font-size: 18px;
+
+            position: relative;
+
+            &.active:after {
+                content: '';
+                width: 100%;
+                position: absolute;
+                left: 0;
+                top: 100%;
+                height: 2px;
+                background-color: #ffffff;
+                border-radius: 2px;
+            }
 
             &:hover {
                 @media screen and (min-width: 768px) {
-                    color: white;
-                    transition: .3s;
+
+                    transition: .2s;
+                    &:after {
+                        content: '';
+                        width: 100%;
+                        position: absolute;
+                        left: 0;
+                        top: 100%;
+                        height: 2px;
+                        background-color: #ffffff;
+                        border-radius: 2px;
+                    }
                 }
             }
+
         }
 
     }
@@ -45,13 +88,20 @@ body {
         a {
             font-size: 16px;
             color: white;
+            @media screen and (max-width: 768px) {
+
+                font-size: 18px;
+
+            }
         }
+
+
     }
 }
 
 
 .footer {
-    background: #75d3b3;
+    background: $main-green;
     padding: 10px 0;
 
     p {
@@ -74,7 +124,7 @@ body {
     z-index: 3;
 
     form {
-        background-color: #75d3b3;
+        background-color: $main-green;
         border: none;
     }
 
@@ -146,7 +196,7 @@ body {
 }
 
 .productAddBtn, .categoryAddBtn {
-    background-color: #75d3b3;
+    background-color: $main-green;
     padding: 10px 15px;
     width: min-content;
     white-space: nowrap;
@@ -157,7 +207,7 @@ body {
     &:hover {
         @media screen and (min-width: 768px) {
             cursor: pointer;
-            color: black;
+            background-color: #5aa28a;
             transition: .3s;
         }
 
@@ -179,8 +229,9 @@ body {
     }
 }
 
+
 .header_items {
-    height: 50px;
+    height: $header_items_height;
     transition: .2s;
 
     &.active {
@@ -231,13 +282,11 @@ body {
             padding: 10px 0;
         }
 
+
         .orderBtn {
             cursor: pointer;
             text-align: center;
-        }
-
-        .orderBtn {
-            background-color: #75d3b3;
+            background-color: $main-green;
             padding: 15px 30px;
             border-radius: 5px;
             color: white;
@@ -246,7 +295,7 @@ body {
 
             &:hover {
                 @media screen and (min-width: 768px) {
-                    color: black;
+                    background-color: #68b79d;
                     transition: .3s;
                 }
 
@@ -285,7 +334,7 @@ body {
 
         button {
             border-radius: 5px;
-            background: #75d3b3;
+            background: $main-green;
             padding: 10px 15px;
 
             &:hover {
@@ -298,7 +347,7 @@ body {
     }
 
     .product {
-        border: 1px solid #75d3b3;
+        border: 1px solid $main-green;
 
         .productImageWrapper {
             width: 300px;
@@ -313,7 +362,7 @@ body {
 
         &:hover {
             @media screen and (min-width: 768px) {
-                box-shadow: 4px 4px 4px #75d3b3;
+                box-shadow: 4px 4px 4px $main-green;
                 transition: .3s;
             }
 
@@ -326,8 +375,6 @@ body {
             object-fit: cover;
         }
 
-        //max-height: 400px;
-        //height: 100%;
 
         form {
 
@@ -351,8 +398,7 @@ body {
     }
 
     .product.show {
-        //width: 100%;
-        //width: min-content;
+
         img {
             max-width: 600px;
         }
@@ -369,6 +415,25 @@ body {
         }
     }
 }
+
+.increment, .decrement {
+    transition: .3s;
+
+    &:hover {
+        transition: .3s;
+        background-color: rgb(28, 168, 80);
+    }
+}
+
+.decrement {
+    transition: .3s;
+
+    &:hover {
+        transition: .3s;
+        background-color: rgb(201, 56, 56);
+    }
+}
+
 
 .filterBlock {
     select, button, option {
@@ -388,6 +453,24 @@ body {
 
     input {
         padding: 12px;
+    }
+
+    button {
+        transition: .3s;
+
+        &:hover {
+            background-color: rgb(27, 159, 75);
+            transition: .3s;
+        }
+    }
+
+    a {
+        transition: .3s;
+
+        &:hover {
+            transition: .3s;
+            background-color: rgb(46, 103, 196);
+        }
     }
 }
 
@@ -421,7 +504,7 @@ body {
 }
 
 .orderDesign {
-    border: 1px solid #75d3b3;
+    border: 1px solid $main-green;
     padding: 10px;
     border-radius: 5px;
     min-width: 300px;
@@ -436,7 +519,7 @@ body {
     .orderDesignForm {
 
         button {
-            background: #75d3b3;
+            background: $main-green;
             color: white;
             width: 100%;
             border-radius: 5px;
@@ -460,7 +543,7 @@ main {
 
 .order_block {
     .order_items {
-        border: 1px solid #75d3b3;
+        border: 1px solid $main-green;
         padding: 10px;
         border-radius: 5px;
     }
@@ -477,11 +560,11 @@ main {
     border-radius: 5px;
 
     td {
-        border: 1px solid #75d3b3;
+        border: 1px solid $main-green;
     }
 
     thead {
-        background-color: #75d3b3;
+        background-color: $main-green;
 
         td {
             padding: 15px;
@@ -492,6 +575,29 @@ main {
     tbody {
         td {
             padding: 5px;
+        }
+    }
+}
+
+.swiper {
+    width: 100%;
+    max-width: 600px;
+    border-radius: 5px;
+    max-height: 400px;
+}
+
+.swiper-button-next:after, .swiper-button-prev:after {
+    font-size: 32px !important;
+}
+
+.productEditForm {
+    button {
+        color: white;
+        transition: .3s;
+
+        &:hover {
+            transition: .3s;
+            background-color: #6cc2a4;
         }
     }
 }
